feat: project deployment updated requierements

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ requests==2.31.0
 plotly==5.15.0
 python-dotenv==1.1.1
 st_autorefresh
+pygments==2.19.2
+mdurl==0.1.2
+markdown-it-py==4.0.0
+rich==14.2.0
