--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas==2.1.1
 requests==2.31.0
 plotly==5.15.0
 python-dotenv==1.1.1
-st_autorefresh
+st_autorefresh==0.0.3      # añade versión específica si existe
 pygments==2.19.2
 mdurl==0.1.2
 markdown-it-py==4.0.0
