--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ st_autorefresh==0.0.3      # añade versión específica si existe
 pygments==2.19.2
 mdurl==0.1.2
 markdown-it-py==4.0.0
-rich==14.2.0
+rich>=10.14.0,<14
