feat: streamlint autorefresh

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,4 @@ pandas==2.1.1
 requests==2.31.0
 plotly==5.15.0
 python-dotenv==1.1.1
-st_autorefresh==0.1.0     # añade versión específica si existe
-pygments==2.19.2
-mdurl==0.1.2
-markdown-it-py==4.0.0
-rich>=10.14.0,<14
+st-autorefresh==0.1.0
